--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -1,7 +1,7 @@
 <div class="text-center">
-  <h2>{{name}}</h2>
+  <h1>{{name}}</h1>
   <p>{{{get_emoji}}}</p>
-  <p>{{title}}</p>
+  <h2>{{title}}</h2>
   <p>{{content}}</p>
   <p>Created by {{user.name}} on {{format_date date_created}}</p>
 
