--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -8,18 +8,10 @@
   <div class="col-md-6">
     <h3>Create a New Blog Post:</h3>
 
-    <form class="form new-project-form">
+    <form class="form new-blog-post-form">
+
       <div class="form-group">
-        <label for="project-name">project name:</label>
-        <input
-          class="form-input"
-          type="text"
-          id="project-name"
-          name="project-name"
-        />
-      </div>
-      <div class="form-group">
-        <label for="blog-title">New Blog Post Title:</label>
+        <label for="blog-title">Title:</label>
         <input
           class="form-input"
           type="text"
@@ -29,7 +21,11 @@
       </div>
       <div class="form-group">
         <label for="blog-content">Content:</label>
-        <textarea class="form-input" id="blog-cont" name="blog-cont"></textarea>
+        <textarea
+          class="form-input"
+          id="blog-content"
+          name="blog-content"
+        ></textarea>
       </div>
       <div class="form-group">
         <button type="submit" class="btn btn-primary">Create</button>
@@ -58,4 +54,4 @@
   {{/if}}
 </div>
 
-<script src="./js/profile.js"></script>
+<script src="./js/dashboard.js"></script>
