--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,23 +1,22 @@
-<!-- Loop over each object in the projects array -->
+<!-- Loop over each object in the blogs array -->
 {{#each blogs as |blog|}}
-  <div class="row mb-4 project">
+  <div class="row mb-4 blog">
     <div class="col-md-5">
       <h2>
         <!-- Call helper function with triple brackets to render the emoji span as HTML -->
         {{{get_emoji}}}
-        <a href="/project/{{blog.id}}">{{blog.name}}</a>
+        <a href="/blog/{{blog.id}}">{{blog.name}}</a>
       </h2>
-      <p>
-        <span for="img" aria-label="money">💲</span>
-        <!-- Pass needed_funding value to the helper function -->
+
       <p>Created by
         {{blog.user.name}}
         on
         {{format_date blog.date_created}}</p>
     </div>
     <div class="col-md-7">
+      <h1>{{blog.title}}</h1>
+
       <p>
-        {{blog.title}}
         {{blog.content}}
       </p>
     </div>
