split login and signup pages, added styling

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,30 +3,47 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Read My Blog Post!</title>
+    <title>KT's Tech Blog</title>
     <link rel="stylesheet" href="/css/jass.css" />
     <link rel="stylesheet" href="/css/style.css" />
+
   </head>
 
   <body>
     <div class="flex-column justify-space-around">
-      <header class="display-flex justify-space-between align-center p-2">
+      <header
+        class="display-flex justify-space-between align-center p-2"
+        id="kt-nav"
+      >
         <h1>
-          <span role="img" aria-label="money">💸</span>
-          <a href="/">Read My Blog Post!</a>
+          <a href="/"><button
+              type="button"
+              class="btn btn-primary btn-lg btn-block"
+            >Homepage</button></a>
         </h1>
         <nav>
           <!-- Conditionally render login or logout links -->
           {{#if logged_in}}
-            <a href="/profile">profile</a>
-            |
-            <button class="no-button" id="logout">logout</button>
+            <a href="/dashboard"><button
+                type="button"
+                class="btn btn-info"
+              >Dashboard</button></a>
+            <button
+              type="button"
+              class="btn btn-info"
+              id="logout"
+            >Logout</button>
           {{else}}
-            <a href="/login">login</a>
+            <a href="/login"><button
+                type="button"
+                class="btn btn-info"
+              >Login</button></a>
+            <a href="/signup"><button type="button" class="btn btn-info">
+                Signup</button></a>
           {{/if}}
         </nav>
       </header>
-      <main class="container container-fluid mt-5">
+      <main class="container container-fluid mt-5" id="kt-main">
         <!-- Render the sub layout -->
         {{{body}}}
       </main>
