--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -1,4 +1,4 @@
-<div class="text-center">
+<div class="text-center" style="border: 1px solid black">
   <h1>{{name}}</h1>
   <p>{{{get_emoji}}}</p>
   <h2>{{title}}</h2>
