--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -33,14 +33,15 @@
     </form>
   </div>
 
-  {{#if blog.length}}
+  {{#if blogs.length}}
     <div class="col-md-6 blog-list">
       <h3>Current Blogs:</h3>
 
       {{#each blogs as |blog|}}
         <div class="row mb-2">
           <div class="col-md-8">
-            <h4><a href="/blog/{{blog.id}}">{{blog.name}}</a></h4>
+            <h4><a href="/blog/{{blog.id}}">{{blog.title}}</a></h4>
+            <p><a href="/blog/{{blog.id}}">{{blog.content}}</a></p>
           </div>
           <div class="col-md-4">
             <button
