--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,8 +19,9 @@
           <a href="/"><button
               type="button"
               class="btn btn-primary btn-lg btn-block"
-            >Homepage</button></a>
+            >Home</button></a>
         </h1>
+
         <nav>
           <!-- Conditionally render login or logout links -->
           {{#if logged_in}}
